--- a/charts/isaac-app/values.yaml
+++ b/charts/isaac-app/values.yaml
@@ -91,8 +91,10 @@ isaac-content-editor:
       value: f1540415e26cc2a5765a
     - name: REACT_APP_AUTH_URL
       value: https://editor-auth.isaac.classis.io/access_token
+    - name: REACT_APP_GITHUB_OWNER
+      value: isaaccomputerscience
     - name: REACT_APP_CONTENT_REPO
-      value: isaac-content-2
+      value: rutherford-content
     - name: REACT_APP_PREVIEW_HOST
       value: https://editor-preview.isaac.classis.io
     - name: REACT_APP_API_STAGING_HOST
