--- a/charts/isaac-app/templates/api/deployment.yaml
+++ b/charts/isaac-app/templates/api/deployment.yaml
@@ -5,6 +5,10 @@ metadata:
   labels:
     {{- include "isaac-app.labels" . | nindent 4 }}
     {{- include "isaac-app.api.selectorLabels" . | nindent 4 }}
+  {{- with .Values.api.deployment.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.api.replicaCount }}
   selector:
